--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "My_Profile",
   "main": "index.js",
   "scripts": {
-    "heroku-prebuild": "npm install --dev",
-    "dev": "webpack serve --mode development",
-    "start": "webpack --mode production"
+    "dev": "webpack serve",
+    "start": "node server.js",
+    "build": "webpack --mode production"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/quangtran12345/CV_Profile#readme",
   "dependencies": {
+    "express": "^4.17.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "typed.js": "^2.0.12",
